# openshift

./: .gitignore  01-dc-primary-deployment-overview.drawio  Containerfile  LICENSE  check_mermaid.py  compose.yaml  docker-compose.yaml  export_batch11.sh  fix_and_export.py  fix_img_tags.py  generate_agent_builder_docs.py  generate_batch1.py  generate_batch10.py  generate_batch11.py  generate_batch2.py  generate_batch3.py  generate_batch4.py  generate_batch5.py  generate_batch6.py  generate_batch7.py  generate_batch8.py  generate_batch9.py  generate_platform_code_reference_docs.py  mkdocs.yml  replace_mermaid.py  replace_remaining.py  requirements.txt  strip_mermaid.py  update_docs.py
openshift-sre/: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Containerfile  Makefile  README.md  compose.yaml  mkdocs.yml  package-lock.json  package.json  pyproject.toml
openshift-sre/docs/: api-reference.md  architect.html  architecture-v030.md  architecture.md  code-core.md  code-runtime.md  code-services.md  console.html  cost-impact.md  drift-diff.html  end-to-end-flow.md  finops-console.html  finops-queue-flow.md  function-reference.md  history.html  index.md  llm-providers.md  llm-utilization.html  openshift-builder.html  operations.md  platform-console.html  playbook-advanced-security-governance.md  playbook-audit-security.md  playbook-finops.md  playbook-platform-automation.md  playbook-storage-governance.md  posture-radar.html  security-console.html  service-coverage.md  tool-drilldown.html  troubleshooting.html  watchlists.html
openshift-sre/scripts/: podman-compose.sh  (+2 more)
(+773 files in other folders)
