[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "openshift-sre-local-agent"
version = "0.1.0"
description = "A local-model AI agent for Red Hat OpenShift SRE operational tasks"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "GitHub Copilot" }]
dependencies = [
  "anthropic>=0.34.0",
  "fastapi>=0.115.0",
  "google-genai>=1.11.0",
  "httpx>=0.27.0",
  "kubernetes>=30.1.0",
  "openai>=1.45.0",
  "pymysql>=1.1.1",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
  "rich>=13.7.1",
  "sqlalchemy>=2.0.36",
  "typer>=0.12.3",
  "uvicorn>=0.30.6",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-mock>=3.14.0",
  "pytest-cov>=5.0.0",
  "locust>=2.29.0",
  "ruff>=0.5.0",
  "mypy>=1.11.0",
]
docs = [
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.5.34",
]

[project.scripts]
openshift-sre-agent = "openshift_sre_agent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/openshift_sre_agent"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q --cov=openshift_sre_agent --cov-report=term-missing --cov-fail-under=50"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM", "TCH"]
ignore = ["S101", "S603", "S607"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
